# marionette

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_en.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py
docs/en/: quick_start.md
docs/ru/: quick_start.md
metrics/grafana/provisioning/datasources/: datasource.yml
metrics/vmagent/: victoria.yml
src/marionette/: __main__.py  main.py
src/marionette/application/: protocols.py
src/marionette/application/dto/: onboarding.py  result.py
src/marionette/application/policy/: onboarding_policy.py
src/marionette/bootstrap/: app.py  config.py
src/marionette/discord/: sender.py
src/marionette/domain/: exceptions.py  repositories.py  roles.py  statuses.py
src/marionette/infrastructure/: config.py  uow.py
src/marionette/presentation/: result_presenter.py
tests/: conftest.py  fakes.py
tests/application/: test_approve_character_usecase.py  test_ban_character_usecase.py  test_decline_character_usecase.py  test_delete_offtopic_message_usecase.py  test_enter_location_usecase.py  test_entrance_usecase.py  test_exit_location_usecase.py  test_exit_usecase.py  test_moderation_usecase.py  test_onboarding_usecase.py  test_paparazzi_usecase.py  test_reset_season_rating_usecase.py  test_season_reset_usecase.py  test_vote_usecase.py
tests/bootstrap/: test_config.py
tests/domain/: test_rating_service.py
tests/infrastructure/hikari/: test_moderation_service.py
(+160 files in other folders)
