[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "marionette"
version = "0.1.0"
description = "HIKARI // Marionette"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "dature>=0.16.0",
    "dishka>=1.8.0",
    "hikari>=2.5.0",
    "hikari-crescent>=1.4.0",
    "hikari-miru>=4.2.0",
    "psycopg[binary,pool]>=3.3.3",
    "redis[asyncio]>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pytest-cov>=7.1.0",
    "nox>=2026.2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marionette"]

[tool.hatch.build.targets.wheel.force-include]
"src/marionette/py.typed" = "marionette/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/marionette",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"src/marionette/__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.14"
packages = ["marionette"]
mypy_path = "src"
strict = true
explicit_package_bases = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
